# Deal-or-NoDeal

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/process-artifacts/: action.yml
.github/workflows/: cmake.yml
docs/html/: _banker_8h_source.html  _button_8h_source.html  _case_8h_source.html  _errors_8h_source.html  _game_8h_source.html  _player_8h_source.html  _random_util_8h_source.html  _settings_8h_source.html  _volume_slider_8h_source.html  annotated.html  class_back_button-members.html  class_back_button.html  class_background_error-members.html  class_background_error.html  class_banker-members.html  class_banker.html  class_button-members.html  class_button.html  class_case-members.html  class_case.html  class_exit_button-members.html  class_exit_button.html  class_font_error-members.html  class_font_error.html  class_game-members.html  class_game.html  class_game_error-members.html  class_game_error.html  class_generous_banker-members.html  class_generous_banker.html  class_greedy_banker-members.html  class_greedy_banker.html  class_helper_banker-members.html  class_helper_banker.html  class_lucky_banker-members.html  class_lucky_banker.html  class_music_error-members.html  class_music_error.html  class_play_button-members.html  class_play_button.html  (+28 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  (+16 more)
docs/latex/: _banker_8h_source.tex  _button_8h_source.tex  _case_8h_source.tex  _errors_8h_source.tex  _game_8h_source.tex  _player_8h_source.tex  _random_util_8h_source.tex  _settings_8h_source.tex  _volume_slider_8h_source.tex  annotated.tex  class_back_button.eps  class_back_button.tex  class_background_error.eps  class_background_error.tex  class_banker.eps  class_banker.tex  class_button.eps  class_button.tex  class_case.tex  class_exit_button.eps  class_exit_button.tex  class_font_error.eps  class_font_error.tex  class_game.tex  class_game_error.eps  class_game_error.tex  class_generous_banker.eps  class_generous_banker.tex  class_greedy_banker.eps  class_greedy_banker.tex  class_helper_banker.eps  class_helper_banker.tex  class_lucky_banker.eps  class_lucky_banker.tex  class_music_error.eps  class_music_error.tex  class_play_button.eps  class_play_button.tex  class_player.tex  class_random_util.tex  (+13 more)
headers/: Banker.h  Button.h  Case.h  Errors.h  Game.h  Player.h  RandomUtil.h  Settings.h  VolumeSlider.h
sources/: Banker.cpp  Button.cpp  Button.h  Case.cpp  Case.h  Errors.cpp  Game.cpp  Game.h  Player.cpp  RandomUtil.cpp  Settings.cpp  VolumeSlider.cpp
